--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.2.6",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "node-ical": "^0.15.3"
   }
 }
