--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
-  "name": "ade_automation",
+  "name": "dgseirb",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node index.ts"
+    "start": "OPENSSL_CONF=/etc/ssl ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
+    "@types/ldapjs": "^2.2.5",
     "@types/node": "^18.11.18",
+    "@types/phantom": "^3.2.6",
+    "@types/tough-cookie": "^4.0.2",
+    "@types/tunnel-ssh": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "axios": "^1.2.6",
+    "axios": "^1.3.1",
+    "axios-cookiejar-support": "^4.0.6",
     "dotenv": "^16.0.3",
-    "node-ical": "^0.15.3"
+    "ldapjs": "^2.3.3",
+    "node-ical": "^0.15.3",
+    "phantom": "^6.3.0",
+    "tough-cookie": "^4.1.2",
+    "tunnel-ssh": "^4.1.6"
   }
 }
